--- a/src/main/resources/com/mycompany/sample/main.fxml
+++ b/src/main/resources/com/mycompany/sample/main.fxml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Icon?>
-<?import com.gluonhq.charm.glisten.mvc.View?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<View fx:id="main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.sample.MainPresenter">
-    <center>
-        <VBox styleClass="box">
-            <children>
-                <Button onAction="#updateColor" fx:id="button" mnemonicParsing="false" text="%button.text">
-                    <graphic>
-                        <Icon content="PALETTE" />
-                    </graphic>
-                </Button>
-                <Label fx:id="color" text="%color.text" />
-                <Label fx:id="label" />
-            </children>
+
+<AnchorPane fx:id="pane" prefHeight="480.0" prefWidth="600.0" stylesheets="main.css" xmlns="http://javafx.com"
+          xmlns="http//javafx.com/javafx/11.0.1"  xmlns:fx="http//javafx.com/fxml/1"
+                fx:controller="com.mycompany.sample.MainController">
+        <VBox layoutX="223.0" layoutY="166.0" prefHeight="400.0" prefWidth="600.0" styleClass="box"
+              AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+              AnchorPane.topAnchor="0.0">
+    <Button onAction="#updateColor" fx:id="button" mnemonicParsing="false" text="button.text"/>
+            <Label fx:id="color" text="%color.text"/>
+            <Label fx:id="label"/>
         </VBox>
-    </center>
-</View>
+        </AnchorPane>
