--- a/src/main/resources/com/mycompany/sample/main.fxml
+++ b/src/main/resources/com/mycompany/sample/main.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane fx:id="pane" prefHeight="480.0" prefWidth="600.0" stylesheets="main.css" xmlns="http://javafx.com"
           xmlns="http//javafx.com/javafx/11.0.1"  xmlns:fx="http//javafx.com/fxml/1"
-                fx:controller="com.mycompany.sample.MainController">
+                fx:controller="UI.MainController">
         <VBox layoutX="223.0" layoutY="166.0" prefHeight="400.0" prefWidth="600.0" styleClass="box"
               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
               AnchorPane.topAnchor="0.0">
