--- a/src/main/resources/com/mycompany/sample/main.css
+++ b/src/main/resources/com/mycompany/sample/main.css
@@ -1,14 +1,15 @@
 .box {
     -fx-spacing: 50;
-    -fx-alignment: center;
 }
 
-.box > .label {
-    -fx-font-size: 1.3em;
-    -fx-text-fill: #de2125;
+.importantText {
+   -fx-font-size: 1.5em;
+   -fx-text-fill: derive(#2125de, 30%);
+   -fx-font-weight: bold;
 }
 
-.box > .button {
-    -fx-font-size: 1.5em;
+
+.naviButton {
+    -fx-font-size: 1.2em;
     -fx-text-fill: derive(#2125de, 30%);
 }
