--- a/src/main/resources/com/mycompany/sample/main.fxml
+++ b/src/main/resources/com/mycompany/sample/main.fxml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane fx:id="pane" prefHeight="480.0" prefWidth="600.0" stylesheets="main.css" xmlns="http://javafx.com"
-          xmlns="http//javafx.com/javafx/11.0.1"  xmlns:fx="http//javafx.com/fxml/1"
-                fx:controller="UI.MainController">
-        <VBox layoutX="223.0" layoutY="166.0" prefHeight="400.0" prefWidth="600.0" styleClass="box"
-              AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-              AnchorPane.topAnchor="0.0">
-    <Button onAction="#updateColor" fx:id="button" mnemonicParsing="false" text="button.text"/>
-            <Label fx:id="color" text="%color.text"/>
-            <Label fx:id="label"/>
-        </VBox>
-        </AnchorPane>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.ComboBox?>
+<AnchorPane stylesheets="main.css" xmlns="http//javafx.com/javafx/11.0.1"
+            xmlns:fx="http//javafx.com/fxml/1" fx:controller="UI.MainController">
+    <VBox styleClass="box" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" prefHeight="500">
+        <Pane>
+        <Label layoutX="0" layoutY="9" text="%lblBankaccount.text" styleClass="importantText" />
+        <Label fx:id="lblBankaccountBalance" layoutX="0" layoutY="42" text="%lblBankaccountBalance.text"/>
+        <Button layoutX="0" layoutY="75" onAction="#deposit" text="%btnDeposit.text"/>
+        <Button layoutX="0" layoutY="108" onAction="#withdraw" text="%btnWithdraw.text"/>
+        </Pane>
+        <TableView fx:id="tableView" prefHeight="120" prefWidth="500"/>
+        <HBox>
+            <Button onAction="#openWallet" text="%btnWalletDetails.text"/>
+            <Button onAction="#newWallet" text="%btnNewWallet.text"/>
+            <ComboBox fx:id="cmbWalletCurrency" promptText="%cmbWalletCurrency.text"/>
+        </HBox>
+        <Button fx:id="btnClose" text="%btnClose.text" styleClass="naviButton"/>
+
+    </VBox>
+</AnchorPane>
